Run tests in nocode-testing without the agent